@startuml
class UserType {
	**id : int**
	nom : string
	<color:#0000dd>users : Users[]</color>
}

class Commercial {
	**id : int**
	nom : string
	prenom : string
	email : string
	<color:#0000dd>users : Users[]</color>
}

class Livraison {
	**id : int**
	dateLivraison : DateTimeInterface
	adresseLivraison : string
	<color:#0000dd>commande : Commande</color>
	<color:#0000dd>livraisonDetails : LivraisonDetails[]</color>
}

class Categories {
	**id : int**
	nom : string
	photo : string
	<color:#0000dd>parent : self</color>
	<color:#0000dd>categories : Categories[]</color>
	<color:#0000dd>products : Products[]</color>
	slug : string
}

class PaymentMethode {
	**id : int**
	nom : string
	<color:#0000dd>commande : Commande</color>
}

class Products {
	**id : int**
	nom : string
	description : string
	prix : int
	stock : int
	created_at : DateTimeImmutable
	referenceFournisseur : string
	photo : string
	<color:#0000dd>categories : Categories</color>
	<color:#0000dd>fournisseur : Fournisseur</color>
	<color:#0000dd>commandeDetails : CommandeDetails[]</color>
	<color:#0000dd>livraisonDetails : LivraisonDetails[]</color>
	slug : string
}

class Fournisseur {
	**id : int**
	nom : string
	adresse : string
	telephone : string
	<color:#0000dd>products : Products[]</color>
}

class Users {
	**id : int**
	email : string
	roles : array
	password : string
	nom : string
	prenom : string
	adresse : string
	codepostal : string
	ville : string
	created_at : DateTimeImmutable
	<color:#0000dd>usertype : UserType</color>
	<color:#0000dd>commandes : Commande[]</color>
	numeroSiret : int
}

class LivraisonDetails {
	**id : int**
	quantite : int
	<color:#0000dd>livraison : Livraison</color>
	<color:#0000dd>product : Products</color>
}

class Commande {
	**id : int**
	reference : string
	created_at : DateTimeImmutable
	reduction : float
	etat : string
	dateFacture : DateTimeInterface
	adresseFacture : string
	dateLivraison : DateTimeInterface
	adresseLivraison : string
	<color:#0000dd>users : Users</color>
	coefficient : float
	total : string
	<color:#0000dd>commandeDetails : CommandeDetails[]</color>
	<color:#0000dd>paymentMethodes : PaymentMethode[]</color>
	<color:#0000dd>livraisons : Livraison[]</color>
	datePayment : DateTimeInterface
}

class CommandeDetails {
	**id : int**
	quantite : int
	prix : float
	<color:#0000dd>commande : Commande</color>
	<color:#0000dd>products : Products</color>
}

UserType "1"--"*" Users
Commercial "1"--"*" Users
Livraison "*"--"1" Commande
Livraison "1"--"*" LivraisonDetails
Categories "*"--"1" Categories
Categories "1"--"*" Products
PaymentMethode "*"--"1" Commande
Products "*"--"1" Fournisseur
Products "1"--"*" CommandeDetails
Products "1"--"*" LivraisonDetails
Users "1"--"*" Commande
Commande "1"--"*" CommandeDetails


hide methods

hide circle

@enduml
